--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         run: flutter pub get
 
       - name: Analyze code
-        run: flutter analyze || true
+        run: flutter analyze
 
       - name: Run tests
         run: flutter test --coverage
