feat: update application ID and improve app name consistency across platforms

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "lnq",
-    "short_name": "lnq",
+    "name": "LnQ",
+    "short_name": "LnQ",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
